v2ray-0.6 对接支付宝当面付

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 config.py
 v2ray/config.json
 v2ray/backend.py
+trade/alipay_public_key.pem
+trade/app_private_key.pem
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
