--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask>=1.1.2
-Werkzeug>=1.0.1
-PyMySQL>=0.10.0
-numpy>=1.19.2
-matplotlib>=3.3.2
-APScheduler~=3.6.3
+Flask
+Werkzeug
+PyMySQL
+numpy
+matplotlib
+APScheduler
+python-alipay-sdk
+qrcode
